# nondeterministic-finite-automaton

./: .gitignore  CMakeLists.txt  README.md  linked_list.c  linked_list.h  main.c  main_complete_example.c  main_dfa_example.c  main_kleene_closure.c  main_minimization.c  main_options.c  nf-automata.c  nf-automata.h
automatas/: automata_3.dot  automata_4.dot
df-automata/: df-automata.c  df-automata.h
example-automatons/: automata_10.dot  automata_11.dot  automata_12.dot  automata_13.dot  automata_14.dot  automata_15.dot  automata_16.dot  automata_17.dot  automata_18.dot  automata_19.dot  automata_2.dot  automata_5.dot  automata_6.dot  automata_7.dot  automata_8.dot  automata_9.dot  automata_dfa.dot
grid/: grid.c  grid.h
linked-lists/: linked_list.c  linked_list.h
nf-automata/: nf-automata.c  nf-automata.h
sets/: set.c  set.h  state.c  state.h
state/: state.c  state.h
